[project]
name = "bocoel"
version = "0.1.2"
description = "Bayesian Optimization as a Coverage Tool for Evaluating Large Language Models"
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
dependencies = [
    "alive-progress>=3.1.5",
    "ax-platform>=0.3.6",
    "botorch>=0.9.5",
    "gpytorch>=1.11",
    "fire>=0.5.0",
    "networkx>=3.2.1",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "parse>=1.20.1",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "structlog>=24.1.0",
    "torch>=2.1.2",
    "typeguard>=2.13.3",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
visual = [
    "dash>=2.14.2",
    "flask>=3.0.0",
    "hiplot>=0.1.33",
    "plotly>=5.18.0",
]
transformers = [
    "transformers>=4.36.2",
    "sentence-transformers>=2.2.2",
]
datasets = [
    "datasets>=2.16.1",
]
metrics = [
    "rouge>=1.0.1",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "sacrebleu>=2.4.0",
]
index = [
    "faiss-cpu>=1.7.4",
    "hnswlib>=0.8.0",
]
cma = [
    "cma>=3.3.0",
]
sklearn-extra = [
    "scikit-learn-extra>=0.3.0",
]
plots = [
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
]
all = [
    "bocoel[cma,datasets,index,metrics,plots,sklearn-extra,transformers,visual]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = "true"

[tool.pdm.dev-dependencies]
format = [
    "autoflake>=2.2.1",
    "black>=24.1.1",
    "isort>=5.13.2",
]
test = [
    "coverage>=7.4.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]
type = [
    "mypy>=1.10.0",
]
pretty = [
    "alive-progress>=3.1.5",
    "rich>=13.7.0",
]
website = [
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.3",
    "myst-parser>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
