[tool.poetry]
name = "bocoel"
version = "0.1.4"
description = "Bayesian Optimization as a Coverage Tool for Evaluating Large Language Models"
authors = ["RenChu Wang <patrick1031wang@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
alive-progress = "^3.2.0"
ax-platform = "^0.4.3"
botorch = "^0.12.0"
gpytorch = "^1.13"
fire = "^0.7.0"
networkx = "^3.4.2"
numpy = "<2"
pandas = "^2.2.3"
parse = "^1.20.2"
PyYAML = "^6.0.2"
scipy = "^1.14.1"
structlog = "^24.4.0"
torch = "^2.5.1"
typeguard = "^4.4.1"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pip = "^24.3.1"
autoflake = "^2.3.1"
black = "^24.10.0"
isort = "^5.13.2"
coverage = "^7.6.7"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-sugar = "^1.0.0"
rich = "^13.9.4"
jupyter = "^1.1.1"
jupyter-book = "^1.0.3"
sphinxcontrib-mermaid = "^1.0.0"


[tool.poetry.group.visual.dependencies]
dash = "^2.18.2"
hiplot = "^0.1.33"
plotly = "^5.24.1"


[tool.poetry.group.huggingface.dependencies]
transformers = "^4.46.3"
sentence-transformers = "^3.3.1"
datasets = "^3.1.0"


[tool.poetry.group.metrics.dependencies]
rouge = "^1.0.1"
rouge-score = "^0.1.2"
nltk = "^3.9.1"
sacrebleu = "^2.4.3"


[tool.poetry.group.faiss.dependencies]
faiss-cpu = "^1.9.0.post1"


[tool.poetry.group.hnswlib.dependencies]
hnswlib = "^0.8.0"


[tool.poetry.group.scikit-learn.dependencies]
scikit-learn-extra = "^0.3.0"


[tool.poetry.group.plots.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
disable_error_code = ["import-untyped", "import-not-found"]

# Skipping analysis for some modules because they are not typed.
[[tool.mypy.overrides]]
module = [
    "bocoel.visual.*",
]
ignore_errors = true

[tool.pdm]
distribution = "true"
