[project]
name = "bocoel"
description = "Bayesian Optimization as a Coverage Tool for Evaluating Large Language Models"
dependencies = ["alive-progress>=3.1.5", "ax-platform<1", "botorch>=0.12.0", "gpytorch>=1.11", "fire>=0.5.0", "networkx>=3.2.1", "numpy<2", "pandas>=2.1.4", "parse>=1.20.1", "pyyaml>=6.0.1", "scikit-learn>=1.3.2", "scipy>=1.11.4", "structlog>=24.1.0", "torch>=2.1.2", "typeguard>=4.4.0", "typing-extensions>=4.9.0"]
requires-python = "<3.13,>=3.12"
readme = "README.md"
dynamic = ["version"]

[[project.authors]]
name = "RenChu Wang"
email = "patrick1031wang@gmail.com"

[project.license]
text = "BSD-3"

[project.optional-dependencies]
tests = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "pytest-xdist>=3.7.0", "pytest-sugar>=1.0.0", "better-exceptions>=0.3.3"]
visual = ["dash>=2.14.2", "flask>=3.0.0", "hiplot>=0.1.33", "plotly>=5.18.0"]
all = ["dash>=2.14.2", "flask>=3.0.0", "hiplot>=0.1.33", "plotly>=5.18.0", "rouge>=1.0.1", "rouge-score>=0.1.2", "nltk>=3.8.1", "sacrebleu>=2.4.0", "scikit-learn-extra>=0.3.0", "matplotlib>=3.8.2", "seaborn>=0.13.2", "cma>=4.0.0", "datasets>=2.16.1", "faiss-cpu>=1.7.4", "hnswlib>=0.8.0"]
transformers = ["transformers>=4.36.2", "sentence-transformers>=2.2.2"]
metrics = ["rouge>=1.0.1", "rouge-score>=0.1.2", "nltk>=3.8.1", "sacrebleu>=2.4.0"]
sklearn-extra = ["scikit-learn-extra>=0.3.0"]
plots = ["matplotlib>=3.8.2", "seaborn>=0.13.2"]
website = ["jupyter>=1.1.1", "jupyter-book>=1.0.3", "myst-parser>=2.0.0", "sphinxcontrib-mermaid>=0.9.2"]
cma = ["cma>=4.0.0"]
datasets = ["datasets>=2.16.1"]
checks = ["autoflake>=2.3.1", "black>=25.1.0", "isort>=6.0.1", "mypy>=1.16.1", "pre-commit>=4.2.0", "pip>=25.1.1", "rich>=14.0.0"]
index = ["faiss-cpu>=1.7.4", "hnswlib>=0.8.0"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pdm]
distribution = "true"

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = ["bocoel.visual.*"]
ignore_errors = true
